fix: prevent scroll calendar month layout overlap

--- a/src/components/Calendar/index.scss
+++ b/src/components/Calendar/index.scss
@@ -76,7 +76,7 @@
   flex-direction: column;
 }
 
-.rdrMonthsHorizontal > div > div > div{
+.rdrMonthsHorizontal:not(.rdrInfiniteMonths) > div > div > div{
   display: flex;
   flex-direction: row;
 }
